--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
 anyhow = { version = "*" }
+regex = { version = "1.5" }
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
