--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,22 +1,22 @@
-name: Rust
+# name: Rust
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+#on:
+#push:
+    #branches: [ "main" ]
+  #pull_request:
+    #branches: [ "main" ]
 
-env:
-  CARGO_TERM_COLOR: always
+#env:
+  #CARGO_TERM_COLOR: always
 
-jobs:
-  build:
+#jobs:
+  #build:
 
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    #steps:
+    #- uses: actions/checkout@v3
+    #- name: Build
+      #run: cargo build --verbose
+    #- name: Run tests
+      #%run: cargo test --verbose
